--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:300,400,500"
   />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
